# BAS

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements-main.txt  requirements.txt
app/: __init__.py  attack.py  auth.py  client.py  main.py  models.py  run.py
app/client/: config.json  main.py
app/static/: test.css
app/templates/: attacks.html  clients.html  dashboard.html  loader.html  login.html  main.html  new_attack.html  new_client.html  new_run.html  register.html  runs.html  view_run.html
app/templates/old_html/: header.html  main.html  main2.html
